First Deploy-Version 2.1

--- a/src/Components/ContactItem/ContactItem.css
+++ b/src/Components/ContactItem/ContactItem.css
@@ -1,38 +1,57 @@
 .contacts-container{
-    display: flex;
-    flex-direction: column;
-    background-color: blueviolet;
+    gap: 10px
 }
-.contact-item-container{
+
+.contact-item-container {
     display: flex;
-    gap: 5px;
     align-items: center;
-    margin: 5px 10px;
-    width: 400px;
-    background-color: aqua;
+    justify-content: space-between;
+    padding: 10px;
+    position: relative;
+    width: 450px;
+    margin: 0px 10px;;
+
 }
+.contact-item-container:hover{
+    background-color: #f6f5f4;
+    border-radius: 10px;
+}
+
 .avatar-container {
-    border-radius: 50%;
-    overflow: hidden;
-    object-fit: contain;
-    width: 50px;
-    height: 50px;
+    margin-right: 20px;
 }
 
 .avatar {
-    object-fit: cover;
-    border-radius: 50%;
-    height: 50px;
     width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    object-fit: cover;
 }
 
-.contact-name-container{
+.contact-name-container {
+    flex-grow: 1;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    margin-left: 10px;
+    overflow: hidden;
+    gap: 5px}
+
+.contact-name-container{
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
-.contact-last-connection{
-    display: flex;
-    justify-content: end;
+
+.contact-name-container {
+    color: #777;
+    font-size: 14px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.contact-last-connection {
+    font-size: 12px;
+    color: #888;
+    margin-left: 10px;
+    white-space: nowrap;
 }
