--- a/src/Screens/ChatScreen/ChatScreen.css
+++ b/src/Screens/ChatScreen/ChatScreen.css
@@ -1,6 +1,15 @@
 .chat-screen-container {
     display: flex;
     flex-direction: column;
-    background-color: burlywood;
+    background-color: transparent;
     width: 100%;
+}
+
+.contact-info-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 20px;
+    background-color: #ebe7e7;
 }
