--- a/src/Components/SplashScreen/SplashScreen.css
+++ b/src/Components/SplashScreen/SplashScreen.css
@@ -4,14 +4,14 @@
     height: 100vh;
     width: 100vw; 
     overflow: hidden;
-    background-color: yellow;
+    background-color: #f6f5f4;
     z-index: -1;
+    display: flex;
+    justify-content: center;
+    align-items:last baseline;
 }
 
-.whatsapp-doodle-pattern{
-    background-size:cover;
-    width: 100vw;
-    height: auto;
-    background-repeat: repeat-x;
+.whatsapp-splash-screen{
+    height: 90%;
 
 }
