--- a/src/Components/ContactItem/ContactItem.css
+++ b/src/Components/ContactItem/ContactItem.css
@@ -9,7 +9,8 @@
     padding: 10px;
     position: relative;
     width: 450px;
-    margin: 0px 20px 10px;
+    margin: 0px 10px;
+    padding-right: 30px;
 
 }
 .contact-item-container:hover{
