--- a/src/Components/Message/Message.css
+++ b/src/Components/Message/Message.css
@@ -1,22 +1,22 @@
 .messages-container {
     display: flex;
     flex-direction: column;
-    background-image: '/images/whatsapp-doodle-pattern.jpg';
+    margin: 10px 50px;
 }
 
 .message {
     max-width: 60%;
     padding: 10px;
-    border-radius: 10px;
+    border-radius: 8px;
     position: relative;
-    display: inline-block;
-    font-family: sans-serif;
+    display: flex;
+    justify-content: space-between;
     font-size: 14px;
     word-break: break-word;
 }
 
 .message p {
-    margin: 0;
+    margin-right: 50px;
 }
 
 .message .hora {
@@ -37,3 +37,13 @@
     background-color: #ffffff;
     border: 1px solid #ccc;
 }
+
+.last-connection-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    position: absolute;
+    bottom: 5px;
+    right: 10px;
+}   
