--- a/src/Components/Message/Message.css
+++ b/src/Components/Message/Message.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     margin: 10px 50px;
+    background-color: transparent;
 }
 
 .message {
@@ -30,12 +31,15 @@
 .message-me {
     align-self: flex-end;
     background-color: #d9fdd3;
+    box-shadow: 0px 1px 2px 0px rgba(0,0,0,0.25);
+
 }
 
 .message-other {
     align-self: flex-start;
     background-color: #ffffff;
-    border: 1px solid #ccc;
+    box-shadow: 0px 1px 2px 0px rgba(0,0,0,0.25);
+    
 }
 
 .last-connection-container {
