--- a/src/Screens/ChatScreen/ChatScreen.css
+++ b/src/Screens/ChatScreen/ChatScreen.css
@@ -1,15 +1,49 @@
 .chat-screen-container {
     display: flex;
     flex-direction: column;
-    background-color: red;
     width: 100%;
+    height: 100vh;
+
 }
 
-.contact-info-container{
+.messages-header-container {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    position: sticky;
+    top: 0;
     padding: 20px 20px;
     background-color: #ebe7e7;
+    width: 100%;
+    z-index: 1;
+}
+
+.messages-body-container {
+    display: flex; 
+    flex-direction: column;
+    position: relative;
+    height: 100%;
+    width: 100%;
+    overflow-y: auto;
+}
+
+.whatsapp-doodle-pattern {
+    display: flex;
+    height: auto;
+    position: absolute;
+    width: 60%;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    opacity: 0.5;
+
+}
+
+.new-message-form-container {
+    display: flex;
+    position: fixed;
+    bottom: 0;
+    padding: 10px 20px;
+    z-index: 10;
 }
