--- a/src/Components/NewMessageForm/NewMessageForm.css
+++ b/src/Components/NewMessageForm/NewMessageForm.css
@@ -1,19 +1,21 @@
 .message-input-container {
     display: flex;
-    align-items: space-between;
+    justify-content: space-between;
     padding: 10px;
     height: 60px;
+    width: 100%;
     border-radius: 50px;
     border: none;
     padding: 10px 20px;
     box-shadow: 0px 0px 6px 1px rgba(0, 0, 0, 0.15);
     margin-left: 20px;
     margin-right: 20px;
-    background-color: white;
+    background-color: rgb(255, 255, 255);
 }
 
 .message-input-container input {
     display: flex;
+    align-items: center;
     font-size: 14px;
     border: none;
     padding: 10px 20px;
