--- a/src/Components/Sidebar/Sidebar.css
+++ b/src/Components/Sidebar/Sidebar.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     height: 100vh;
-    width: 100px;
+    width: 5%;
     background-color: #f5f5f5;
     padding: 10px;
     justify-content: space-between;
