--- a/src/Components/SplashScreen/SplashScreen.css
+++ b/src/Components/SplashScreen/SplashScreen.css
@@ -2,7 +2,7 @@
     background-size: cover;
     background-position: center;
     height: 100vh;
-    width: 100vw; 
+    width: 65%; 
     overflow: hidden;
     background-color: #f6f5f4;
     z-index: -1;
