--- a/src/Screens/ChatScreen/ChatScreen.css
+++ b/src/Screens/ChatScreen/ChatScreen.css
@@ -9,16 +9,29 @@
 .messages-header-container {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
     align-items: center;
     position: sticky;
     top: 0;
-    padding: 20px 20px;
-    background-color: #ebe7e7;
+    padding: 10px 20px;
+    background-color: #ffffff;
     width: 100%;
     z-index: 1;
+    box-shadow: 0px 1px 2px 0px rgba(0,0,0,0.25);
+
+    
 }
 
+.contact-info-container{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.chat-screen-contact-icons{
+    display: flex;
+    gap:5px;
+    margin-left: auto;
+}
 
 
 
