--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .contacts-container {
   width: 30%;
-  height: 100vh;
+  height: 100dvh;
   display: flex;
   flex-direction: column;
   overflow: hidden;
