--- a/src/Components/Sidebar/Sidebar.css
+++ b/src/Components/Sidebar/Sidebar.css
@@ -1,34 +1,53 @@
+a, a:visited, a:active {
+    color: inherit;
+    text-decoration: none;
+}
+
+
+
 .sidebar{
     display: flex;
     flex-direction: column;
-    height: 100vh;
-    width: 5%;
+    height: 100dvh;
+    width: 4%;
     background-color: #f5f5f5;
     padding: 10px;
     justify-content: space-between;
-    align-items: center;
-
-    
-
+    align-items: center;   
 }
 
 .top-sidebar-icons, .bottom-sidebar-icons{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    gap: 5px;
+    gap: 15px;
+    margin: 10px 0px;
 
 }
 
 .sidebar-icon{
-    font-size: 22px;
-    color: #00000099;
-    
+    width: 28px;
+    height: 28px;
+    padding: 5px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #5e6a70;
+    transition: all 0.2s ease-in-out;
+    overflow: visible;
 }
 
 .sidebar-icon:hover {
-    font-size: 22px;
-    color: #00000099;
+    background-color: #e1e1e1;
+    cursor: pointer;
+    box-shadow: 0 0 0 4px #e1e1e1;
+
+}
+
+.nav-link-active .sidebar-icon,
+.sidebar-icon.active {
     background-color: #eae9e7;
-    border-radius: 50%;
+    box-shadow: 0 0 0 4px #e1e1e1;
+    color: rgb(37, 37, 37);
 }
