--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,17 @@
     text-decoration: none;
 }
 
+.primary-button-green{
+    background-color: #1daa61;
+    border-radius: 40px;
+    padding: 8px 24px;
+    cursor: pointer;
+    font-size: 16px;
+    color: #ffffff;
+    font-weight: 600;
+    border: none;
+}
+
 .primary-button {
     background-color: transparent;
     border-radius: 20px;
