--- a/src/Screens/ChatScreen/ChatScreen.css
+++ b/src/Screens/ChatScreen/ChatScreen.css
@@ -1,9 +1,9 @@
 .chat-screen-container {
     display: flex;
     flex-direction: column;
-    width: 65%;
     height: 100dvh;
-
+    overflow-y: hidden;
+    flex: 1;
 }
 
 .messages-header-container {
@@ -16,20 +16,22 @@
     background-color: #ffffff;
     width: 100%;
     z-index: 1;
-    box-shadow: 0px 1px 2px 0px rgba(0,0,0,0.25);
+    box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.25);
 
-    
 }
 
-.contact-info-container{
+
+
+.contact-info-container {
     display: flex;
     flex-direction: column;
     gap: 5px;
+    margin-left: 10px;
 }
 
-.chat-screen-contact-icons{
+.chat-screen-contact-icons {
     display: flex;
-    gap:5px;
+    gap: 5px;
     margin-left: auto;
 }
 
@@ -41,7 +43,7 @@
     position: relative;
     height: 100%;
     overflow-y: auto;
-    margin-bottom: 70px;
+    width: 100%;
 }
 
 .messages-body-container::-webkit-scrollbar {
@@ -61,15 +63,38 @@
 .whatsapp-doodle-pattern {
     z-index: -1;
     position: fixed;
-    width:65%;
-
+    width: 70%;
+    min-height: 100dvh;
+    object-fit: cover;
 }
 
 .new-message-form-container {
     display: flex;
-    width: 65%;
-    position: fixed;
+    width: 100%;
+    position: sticky;
     bottom: 0;
-    padding: 10px 20px;
+    padding: 0px 20px 20px;
     z-index: 2;
+}
+
+
+@media (width <=800px) and (width >=501px) {
+    .whatsapp-doodle-pattern {
+        z-index: -1;
+        position: fixed;
+        width: 100%;
+        height: 100dvh;
+        object-fit: cover;
+    }
+}
+
+
+@media (width <=500px) {
+    .whatsapp-doodle-pattern {
+        z-index: -1;
+        position: fixed;
+        width: 100%;
+        height: 100dvh;
+        object-fit: cover;
+    }
 }
