--- a/src/Screens/SettingsScreen/SettingsScreenSidebar.css
+++ b/src/Screens/SettingsScreen/SettingsScreenSidebar.css
@@ -1,3 +1,10 @@
+.settings-container {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    overflow-y: auto;
+    padding: 18px;
+}
 
 .settings-search-bar {
     display: flex;
@@ -6,7 +13,7 @@
     border-radius: 20px;
     border: none;
     padding: 10px 20px;
-    margin: 0px 10px 10px;
+    margin: 10px 0px 10px;
     background-color: #f6f5f4;
     height: 40px;
     gap: 5px;
@@ -27,8 +34,9 @@
     justify-content: space-between;
     padding: 10px;
     position: relative;
-    margin: 0px 10px;
+    margin: 10px 10px;
     padding-right: 30px;
+    border-bottom: #dddcdb solid 1px;
 
 }
 
