--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,11 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css");
 
+html, body, #root {
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden; /* Esto evita el scroll horizontal */
+}
+
 * {
     box-sizing: border-box;
     padding: 0;
@@ -13,7 +19,7 @@
     border-radius: 40px;
     padding: 8px 24px;
     cursor: pointer;
-    font-size: 16px;
+    font-size: 14px;
     color: #ffffff;
     font-weight: 600;
     border: none;
@@ -47,8 +53,37 @@ h2{
     color: #0a0a0a;
     font-weight: 400;   
 }
-span{
+.span{
     font-size: 14px;
     color: #00000099;
     font-weight: 400;
+}
+.span-bold{
+    font-size: 14px;
+    font-weight: 700;
+}
+
+
+.icon{
+    color: #666565;
+    width: 28px;
+    height: 28px;
+    padding: 3px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.2s ease-in-out;
+    overflow: visible;
+}
+
+.icon-dark{
+        color: #020202;
+
+}
+.icon:hover {
+    background-color: #e1e1e1;
+    cursor: pointer;
+    box-shadow: 0 0 0 4px #e1e1e1;
+
 }
