--- a/src/Screens/ChatScreen/ChatScreen.css
+++ b/src/Screens/ChatScreen/ChatScreen.css
@@ -10,6 +10,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: space-between;
     position: sticky;
     top: 0;
     padding: 10px 20px;
@@ -20,6 +21,33 @@
 
 }
 
+.messages-header-user-container{
+    display: flex;
+}
+
+.chat-screen-contact-icons {
+    display: flex;
+    gap:15px;
+}
+
+.chat-screen-camera-icon{
+    color: #666565;
+    height: 28px;
+    border-radius: 16px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.2s ease-in-out;
+    overflow: visible;
+    padding: 5px;
+}
+
+.chat-screen-camera-icon:hover {
+    background-color: #e1e1e1;
+    cursor: pointer;
+    box-shadow: 0 0 0 4px #e1e1e1;
+
+}
 
 
 .contact-info-container {
@@ -29,11 +57,7 @@
     margin-left: 10px;
 }
 
-.chat-screen-contact-icons {
-    display: flex;
-    gap: 5px;
-    margin-left: auto;
-}
+
 
 
 
