--- a/src/Screens/CommunitiesScreen/CommunitiesScreenSidebar.css
+++ b/src/Screens/CommunitiesScreen/CommunitiesScreenSidebar.css
@@ -23,3 +23,10 @@
 
 .communities-image{
 width: 40%;}
+
+@media (width <=800px) and (width >=501px) {
+    .communities-image{
+        min-width: 20%;
+        max-width: 25%;
+    }
+}
